[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnemyShip.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "move1"
length = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 57, -0.25, 0, 0.25, 0, 193, -0.25, 0, 0.25, 0, 191, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 130, -0.25, 0, 0.25, 0, 43, -0.25, 0, 0.25, 0, 447, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 1.5 )
}

[node name="EnemyShip" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShotPos" type="Position2D" parent="."]
position = Vector2( 0, 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShotTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 21 )
enabled = true
cast_to = Vector2( 0, 400 )
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/move1 = SubResource( 3 )

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
